Fix Menu doesn't have a scrollbar bug

--- a/public/css/style.default.css
+++ b/public/css/style.default.css
@@ -1412,6 +1412,11 @@ a .label-default:after, a .label-primary:after {
     font-size: 14px;
 }
 
+.leftpanel .leftmenu .nav-tabs ul.projectselector {
+    overflow: auto;
+    height: 90vh;
+}
+
 .leftpanel .leftmenu .nav-tabs ul.projectselector li.active a {
     background-image:none;
     color:#fff;
